# my-context-kit

./: .dockerignore  .eslintignore  .gitignore  .pr-body.md  .prettierignore  AGENTS.md  CHANGELOG.md  CODE_REVIEW_SUMMARY.md  LANGCHAIN_CONSOLIDATION.md  LANGCHAIN_STATUS.md  PHASE_2_COMPLETE.md  PHASE_2_PROGRESS.md  PHASE_2_VERIFICATION.md  README-SCRIPTS.md  README.md  RELEASING.md  SECURITY.md  WARP.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  token-report.json
context-kit-service/: .env.example  AI_ASSISTANT_GAPS_REVIEW.md  ASSISTANT_SERVICE_COMPLETE.md  CLEAN_ARCHITECTURE_REFACTOR.md  PHASE_1_COMPLETE.md  PHASE_3_COMPLETE.md  PHASE_4_COMPLETE.md  PHASE_5_COMPLETE.md  README.md  package.json  pyproject.toml
context-kit-service/src/context_kit_service/: main.py
context-kit-service/src/context_kit_service/application/: __init__.py
context-kit-service/src/context_kit_service/domain/: __init__.py
context-kit-service/src/context_kit_service/endpoints/: __init__.py  assistant.py  codegen.py  inspect.py  promptify.py  spec.py  spec_log.py
context-kit-service/src/context_kit_service/infrastructure/: __init__.py
context-kit-service/src/context_kit_service/models/: __init__.py  ai_requests.py  assistant.py  requests.py  (+1 more)
context-kit-service/tests/: __init__.py  conftest.py  test_ai_router.py  test_api.py  test_application.py  test_context_loader.py  test_domain.py  test_e2e_pipeline.py  test_infrastructure.py  test_langchain_service.py  test_logging.py  test_presentation.py  test_settings.py  test_spec_log_writer.py
context-kit-service/utils/: sse.py
(+668 files in other folders)
